Release History

v1.0.0903.0408
- added ability to specify inline anonymous templates in JBST using declarative <jbst:control></jbst:control> syntax

v1.0.0903.0309
- added unparsed block syntax <%# %> for inserting data that contains markup
- fixing bug where globalization keys weren't being correctly picked up in DOM attributes

v1.0.0903.0117
- added JsonML.BST.bind to dataBind and hydrate all in one step (including JsonFx behavior binding)
- deprecated JsonFx.UI.bind(jbst,data) in favor of myJBST.bind(data,index) on JBSTs
- updated documentation examples to use myJBST.bind
- deprecated JsonFx.Bindings.register(tag,css,bind,unbind) in favor of more flexible JsonFx.Bindings.add(selector,bind,unbind)
- enabled JsonFx.Bindings.add to accept any jQuery selector if jQuery is present
- eneabled native JsonFx.Bindings.add to accept lists of simple selectors and simple ID selectors
- updated documentation examples to use JsonFx.Bindings.add
- changed JsonML.BST from constructor to factory (i.e. "JsonML.BST(jbst);" rather than "new JsonML.BST(jbst);")
- allowed JsonML.BST factory to accept a function which switches templates based upon input data
- added JsonFx.Bindings.replace to further reduce redundant output of jbst server control

v1.0.0902.2522
- fix for binding issue where elements getting added may alter the set of elements still being processed
- being less aggressive about CF/LF suppression in JavaScript compaction to be more compatible with broken scripts
- fixed long-standing issue with JSLint which prevented upgrading to latest version of Crockford's code
- upgraded JSLINT to rev 2009-02-13
- adding basic IIS7 handler mappings to web.configs

v1.0.0902.1623
- added an InlineData property on the server jbst:control to directly serialize and bind one-time-use data without needing to name it

v1.0.0902.1608
- fixed a bug in CSS compaction when specifying web fonts with @font-face blocks:
	- fixed at-rules which do not have a value after the identifier